# nefelis

./: .clang-format  .gitignore  README.md  pyproject.toml
doc/: bibliography.md  deg3.md  fp2.md  performance.md
doc/examples/: factordb.md
doc/examples/cado/: parameters.snfs400  parameters.snfs500  parameters.snfs600  snfs400.poly  snfs500.poly  snfs600.poly
nefelis/: __init__.py  __main__.py  cadocompat.py  filter.py  filter_disk.py  filter_gf2.py  integers.py  linalg.py  linalg_gf2.py  linalg_impl.py  linalg_python.py  lingen.py  lingen_gf2.py  logging.py  nefelis_flint_extras.pyx  polys.py  sieve.py  sieve_vk.py  skewpoly.py
nefelis/backends/kompute/: linalg.py  linalg_gf2.py  lingen_gf2.py  sieve.py
nefelis/deg2/: README.md  __init__.py  dlog.py  filter.py  linalg.py  polyselect.py  sieve.py  sieve_cpu.py  sieve_vk.py
nefelis/deg3/: README.md  cubic.py  dlog.py  linalg.py  polyselect.py  sieve.py
nefelis/factor/: __init__.py  linalg.py  polyselect.py  polyselect3.py  polyselect_basem.py  polyselect_snfs.py  sieve.py  sqrt_arb.py  sqrt_padic.py
nefelis/fp2/: __init__.py  dlog.py  linalg.py  polyselect.py  sieve.py
nefelis/tests/: test_linalg_vk.py
nefelis/utils/: relstats.py  stdexamples.py
nefelis/vulkan/: __init__.py  arith.comp  bigint.comp  linesieve_1roots.comp  linesieve_2sieve.comp  linesieve_2sieveboth.comp  linesieve_3factor.comp  lingen_step1.comp  lingen_step2.comp  sieve_1roots.comp  sieve_2sieve.comp  sieve_3factor.comp  sieve_rat_1roots.comp  sieve_rat_2sieve.comp  spmv_bigint.comp  spmv_bigint2.comp  spmv_bigint3.comp  spmv_gf2.comp  spmv_gf2_blockcoo.comp  spmv_gf2_blockcoo_clear2.comp  spmv_gf2_blockcoo_transpose.comp  spmv_gf2_blockcoo_transpose2.comp
