[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "nefelis"
version = "0.1"
authors = [ { name="Rémy O", email="remyoudompheng@gmail.com" } ]
description = "NFS implementation using GPU"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]

dependencies = [
  "python-flint>=0.7",
  "kp==0.9.0",
  "tqdm>=4.0",
  "networkx>=3.2",
  "vulkan",
  "pymqs @ https://github.com/remyoudompheng/yamaquasi/releases/download/0.3/pymqs-0.3-cp37-abi3-manylinux_2_28_x86_64.whl#sha256=51116230be394e90c92eba9bd2d159a137712e9f18ff7e60239547514f4f54b5 ; platform_system=='Linux' and platform_machine=='x86_64'"
]

[project.optional-dependencies]
test = ["pytest"]
dev = [
  "mypy",
  "types-networkx",
  "types-tqdm"
]

[project.scripts]
nefelis = "nefelis.__main__:main"

[tool.setuptools]
ext-modules = [{name = "nefelis_flint_extras", sources = ["nefelis/nefelis_flint_extras.pyx"], libraries = ["flint"]}]

[tool.setuptools.packages.find]
include = ['nefelis*']

[tool.setuptools.package-data]
nefelis = ["vulkan/*.comp"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["."]

[tool.ruff.lint]
# It's okay to name variables 'l'
ignore = ["E741"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
